<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
        <PreferenceCategory
                android:title="@string/summary_preferences">
    		<CheckBoxPreference
    		    android:key="showBattery"
            	android:title="@string/title_preference_show_battery"
            	android:defaultValue="false"
            	android:summaryOn="@string/summary_on_preference_show_battery" 
            	android:summaryOff="@string/summary_off_preference_show_battery" />
		</PreferenceCategory>
		<PreferenceCategory
                android:title="@string/robot_preferences">
		        <EditTextPreference
		            android:key="programName"
                	android:name="@string/title_preference_name_program"
                	android:summary="@string/title_preference_summary_name_program"
                	android:defaultValue="Untitled-1.rxe"
                	android:title="@string/preference_edit_this_text"/>
		        </PreferenceCategory>
</PreferenceScreen>