<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >


    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.82"
        android:orientation="vertical" >
    </LinearLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/robot_name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/fowardLeft"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foward_left"
                android:textSize="40dp" />

            <Button
                android:id="@+id/foward"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/foward"
                android:textSize="40dp" />

            <Button
                android:id="@+id/fowardRight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/foward_right"
                android:textSize="40dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/left"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/left"
                android:textSize="40dp" />

            <Button
                android:id="@+id/buttonScan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_scan_off"
                android:textSize="40dp" />

            <Button
                android:id="@+id/right"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/right"
                android:textSize="40dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/backwardLeft"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/backward_left"
                android:textSize="40dp" />

            <Button
                android:id="@+id/backward"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/backward"
                android:textSize="40dp" />

            <Button
                android:id="@+id/backwardRight"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/backward_right"
                android:textSize="40dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >
        </TableRow>
    </TableLayout>

    <ProgressBar
        android:id="@+id/battery"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>